syntax = "proto3";
import "currencies.proto";
import "error.proto";

enum Interval {
    Day = 0;
    Week = 1;
    Month = 2;
    Year = 3;
}

message PlanResponse {
    oneof responses {
        Error error = 1;
        PlanSuccess response = 2;
    }
}

message PlanSuccess {
    string id = 1;
    string object = 2;
    uint64 amount = 3;
    int64 created = 4;
    Currency currency = 5;
    Interval interval = 6;
    int32 interval_count = 7;
    bool livemode = 8;
    map<string, string> metadata = 9;
    string name = 10;
    string statement_descriptor = 11;
    int32 trial_period_days = 12;
}

message CreatePlanRequest {
    string id = 1;
    uint64 amount = 2;
    Currency currency = 3;
    Interval interval = 4;
    string name = 5;
    int32 interval_count = 6;
    map<string, string> metadata = 7;
    string statement_descriptor = 8;
    int32 trial_period_days = 9; 
}

message GetPlanRequest {
    string id = 1;
}

message UpdatePlanRequest {
    string id = 1;
    map<string, string> metadata = 2;
    string name = 3;
    string statement_descriptor = 4;
    int32 trial_period_days = 5;
}

message DeletePlanRequest {
    string id = 1;
}

message DeletePlanResponse {
    bool deleted = 1;
    string id = 2;
}

message ListFilter {
    int64 gt = 1;
    int64 gte = 2;
    int64 lt = 3;
    int64 lte = 4;
}

message ListRequest {
    ListFilter created = 1;
    string ending_before = 2;
    string starting_after = 3;
    int32 limit = 4;
}

service Plan {
    rpc UpdatePlan(UpdatePlanRequest) returns (PlanResponse) {}
    rpc CreatePlan(CreatePlanRequest) returns (PlanResponse) {}
    rpc DeletePlan(DeletePlanRequest) returns (DeletePlanResponse) {}
    rpc GetPlan(GetPlanRequest) returns (PlanResponse) {}
    rpc ListPlans(ListRequest) returns (stream PlanResponse) {}
}